# Deep_Reinforcement_Learning

./: 00_human_lunar_lander_benchmark.py  01_deep_q_network.ipynb  02_VPG.py  02_vanilla_policy_gradients.ipynb  LICENSE  LunarLander_in_Action_ONNX.py  Makefile  README.md  pyproject.toml
trained_networks_lunar_lander/: deep_q_network_lunar_lander_2025-09-13_21-12.onnx  deep_q_network_lunar_lander_2025-09-13_21-12.pth
